# AISynthesizer

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  install.sh  job.sh  pyproject.toml  requirements.txt
aisynthesizer/: metrics.py  predict_model.py  train_model.py  utils.py
aisynthesizer/data/: make_dataset.py  video_dataset.py
aisynthesizer/data/sub_data/: .gitignore  frames.py  midi.ipynb  synth_create.py  test.mid
aisynthesizer/models/: gan.py  vivit.py
config/: config.yaml
data/: .gitignore  create_video_and_midi.py  midi.ipynb  midi_video_combine.sh  synth_create.py
src/: data.py  eval.py  frames.py  model.py  train.py  utils.py
src/classification/: .gitignore  dataset.py  eval.py  frame2midi.py  metrics.py  model.py  notebook.ipynb  predict_midis.py  test_train_eval.ipynb  train.py  train_models.ipynb  utils.py  video2midi.ipynb
src/lstm/: model.py  processing.py  train.py
src/simple_cnn/: .gitignore  notebook.ipynb
src/simple_cnn/results/simpleCNN/: accuracy.npy  model.pt  test_loss.npy  train_loss.npy
src/video2midi/: dataset.py  eval.py  train.py  utils.py
